# zandbak

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: all_push.yaml  ci.yaml  codeql-analysis.yml  main.yaml  main_push.yaml  push.yaml
docs/: api.md  conf.py  for_contributors.md  index.md  installation.md  requirements.txt
tests/beams/: test_simply_supported.py
zandbak/: __init__.py
zandbak/beams/: simply_supported.py
