[metadata]
name = zandbak
author = Arpad Rozsas
author_email = rozsasarpi@gmail.com
description = A sandbox python repository for testing GitHub features, CI pipelines,
    and python packages.
long_description = file: README.md
url = https://github.com/rozsasarpi/zandbak
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >= 3.6
package_dir = zandbak
packages = find:
install_requires =
    numpy<2

[options.packages.find]
where = zandbak

[options.extras_require]
tests =
    pytest
    coverage[toml]
    pre-commit
    black
    isort
    mypy
    flake8
    flake8-tidy-imports
    flake8-import-order
